--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Copyright (C) 2012 by Emad Noorizadeh.
 
 
 mdpack (Molecular Dynamics Package) 
-version 0.1  pre-released experimental version
+version 0.1  
 -------------
 
 mdpack aimed at research scientists and algorithm developers 
